@startuml

!includeurl https://raw.githubusercontent.com/skleanthous/C4-PlantumlSkin/master/build/output/general/notes.puml

Customer *--> "1" CustomerId
Customer *--> "1" CustomerState

class CustomerId {
    UUID id
    +parse(String): CustomerId
}

class CustomerState {
    String firstName
    String lastName
}

interface CustomerRepository {
    +Optional<Customer> findById(CustomerId)
    +Optional<Customer> findByFirstNameAndLastName(firstName, lastName)
    +List<Customer> findByCriteria(List<FindCriteria>)
    +void add(CustomerId, CustomerState)
    +void update(CustomerId, CustomerState)
    +void remove(CustomerId)
}

CustomerRepository --> "read and writes" Customer

@enduml
